# plane-code

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md
src/: agent.rs  cargo_ops.rs  cli.rs  config.rs  display.rs  flow.rs  flow_cli.rs  groq.rs  keys.rs  llm.rs  main.rs  models.rs  ollama.rs  read_set.rs  sessions.rs  tools.rs  tui.rs
src/ontology/: indexer.rs  mod.rs  model.rs  query.rs  update.rs
