[package]
name = "planecode"
version = "0.1.3" # EDIT: version exposed via CLI and display
edition = "2021"
description = "Ontology-based Rust coding agent. Indexes a workspace into a structural graph and drives an LLM through query/edit/verify loops."
authors = ["Rasmus Ahtava <rasmus@ahtava.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahtavarasmus/plane-code"
readme = "README.md"
keywords = ["llm", "agent", "rust", "coding", "ontology"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "plane-code"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ansi-to-tui = "7"
colored = "2"
crossterm = "0.27"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
git2 = "0.13"
libc = "0.2"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
prettyplease = "0.2"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
lto = "thin"
codegen-units = 1

[workspace]
exclude = ["sandbox"]
